--- a/GatorTask_client/src/assets/styles.css
+++ b/GatorTask_client/src/assets/styles.css
@@ -1,5 +1,13 @@
+/* tailwind */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*
+
 html { box-sizing: border-box;}
 *, *:before, *:after { box-sizing: inherit;}
+
 body {
 
     font-family: Arial, Helvetica, sans-serif;
@@ -77,3 +85,5 @@ body {
     margin-bottom: 1rem;
     padding: 1rem 1rem 1rem 1rem;
 }
+
+*/
